--- a/src/DurableTask.Netherite/DurableTask.Netherite.csproj
+++ b/src/DurableTask.Netherite/DurableTask.Netherite.csproj
@@ -34,8 +34,10 @@
     <PackageReference Include="Microsoft.Azure.EventHubs.Processor" Version="4.3.0" />
     <PackageReference Include="Microsoft.Azure.Storage.Blob" Version="11.2.2" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.2.0" />
-    <PackageReference Include="Microsoft.FASTER.Core" Version="1.7.2" />
-    <PackageReference Include="Microsoft.Azure.DurableTask.Core" Version="2.4.1" />
+    <PackageReference Include="Microsoft.FASTER.Core" Version="1.7.4-tag26" />
+    <PackageReference Include="Microsoft.FASTER.Indexes.SubsetIndex" Version="1.7.4-tag26" />
+    <PackageReference Include="Microsoft.FASTER.Libraries.SubsetIndex" Version="1.7.4-tag26" />
+    <PackageReference Include="Microsoft.Azure.DurableTask.Core" Version="2.4.1-tag17" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.*" PrivateAssets="All" />
   </ItemGroup>
